deprecated constructor Integer(int)