@@ -116,7 +116,8 @@ public class FluxAndMonoControllerTest {
 	
 	@Test
 	public void mono( ) {
-		Integer expectedValue = new Integer(1);
+		
+		Integer expectedValue = Integer.valueOf(1);
 		
 		webTestClient.get().uri("/mono")
 			.accept(MediaType.APPLICATION_JSON_UTF8)
